--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Rohan Malhotra</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="./static/css/bootstrap.min.css">
     <link rel="stylesheet" href="./static/css/index.css">
   </head>
   <body>
